[gd_scene load_steps=6 format=2]

[ext_resource path="res://Creature.gd" type="Script" id=1]
[ext_resource path="res://parts/blob/BlobBody.tscn" type="PackedScene" id=2]
[ext_resource path="res://silhouete_shader.tres" type="Shader" id=3]

[sub_resource type="ShaderMaterial" id=2]
shader = ExtResource( 3 )

[sub_resource type="CircleShape2D" id=1]
radius = 301.335

[node name="Creature" type="Node2D"]
material = SubResource( 2 )
scale = Vector2( 0.2, 0.2 )
script = ExtResource( 1 )

[node name="BlobBody" parent="." instance=ExtResource( 2 )]
position = Vector2( 0, -155 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 23.3333, -126.667 )
shape = SubResource( 1 )

[node name="Tween" type="Tween" parent="."]

[connection signal="input_event" from="Area2D" to="." method="_on_Area2D_input_event"]
[connection signal="mouse_entered" from="Area2D" to="." method="_on_Area2D_mouse_entered"]
